[package]
name = "polkadot-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52.1", features = ["dns", "identify", "kad", "macros", "mdns", "ping", "tcp", "tokio", "yamux", "websocket", "request-response"] }
tokio = { version = "1.30.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
snow = { version = "0.9.2", features = ["ring-resolver"], default-features = false }
quick-protobuf = "0.8"
once_cell = "1.18.0"
rand = "0.8.3"
static_assertions = "1"
thiserror = "1.0.44"
x25519-dalek = "1.1.0"
zeroize = "1"
futures = "0.3.28"
